# fictional-eureka

./: README.md  piece.ppm
Code/computer-graphics-ray-tracing/: .gitignore  CMakeLists.txt  main.cpp
Code/computer-graphics-ray-tracing/include/: Cylinder.h  text_overlay.h
Code/computer-graphics-ray-tracing/src/: Cylinder.cpp  DirectionalLight.cpp  Plane.cpp  PointLight.cpp  Sphere.cpp  Triangle.cpp  TriangleSoup.cpp  blinn_phong_shading.cpp  creative.json  first_hit.cpp  generate_scene.cpp  raycolor.cpp  reflect.cpp  viewing_ray.cpp  write_ppm.cpp
